[chore]: update junit to 5.7.0, mockito to 3.5.13, jacoco to 0.8.6.